--- a/app/templates/visual.hbs
+++ b/app/templates/visual.hbs
@@ -1,3 +1,4 @@
+<h1 class="fixed-header">Migrations to US 1940-1950</h1>
 <svg height="568" width="1024">
     <g transform="translate(0,0)">
         <image width="1024" height="568" xlink:href="assets/img/map.png" class="map"></image>
